# RIGOL-DP832-GUI

./: README.md  RIGOL_DP832_GUI.py  pyproject.toml
